--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* Add application styles & imports to this file! */
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  margin: 2em;
+}
+
+h2, h3 {
+  color: #444;
+  font-weight: lighter;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
